--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
     </head>
     <body>
-        <h1 class="cabecera" title="Calculadora de CORE">Calculadora de CORE - INTEGRA</h2>
+        <h1>Academia INTEGRA</h1>
+        <h2 class="cabecera" title="Calculadora de CORE">Calculadora de CORE - INTEGRA</h2>
     </body>
 </html>
