Eliminar atributo innecesario del title

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </head>
     <body>
         <h1>Academia INTEGRA</h1>
-        <h2 class="cabecera" title="Calculadora de CORE">Calculadora de CORE - INTEGRA</h2>
+        <h2 class="cabecera">Calculadora de CORE - INTEGRA</h2>
     </body>
 </html>
