--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
     <body>
         <h1>Academia INTEGRA</h1>
         <h2 class="cabecera">Calculadora de CORE - INTEGRA</h2>
+        <label for="pantalla">Número:</label>
+        <input type="text" id="pantalla">
     </body>
 </html>
