Meter input en contenedor para futuro CSS

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <body>
         <h1>Academia INTEGRA</h1>
         <h2 class="cabecera">Calculadora de CORE - INTEGRA</h2>
-        <label for="pantalla">Número:</label>
-        <input type="text" id="pantalla">
+        <div id="input_texto">
+            <label for="pantalla">Número:</label>
+            <input type="text" id="pantalla">
+        </div>
     </body>
 </html>
