--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
                 document.getElementById("pantalla").value = valor;
             }
 
+            const vaciarInput = () => {
+                document.getElementById("pantalla").value = "";
+            }
+
             // OPERACIONES UNITARIAS
             const sq = () => {
                 let inputValue = getInputValue();
@@ -34,11 +38,36 @@
                 setInputValue(resultado);
             };
 
+
+            // OPERACIONES BINARIAS
+            let acumulador = 0;
+            let operador = "";
+
+            const acumula = n => {
+                switch (operador) {
+                    case "":
+                        acumulador = n;
+                        break;
+                    case "+":
+                        acumulador += n;
+                        break;
+                }
+            }
+
+            const add = () => {
+                acumula(getInputValue());
+                operador = "+";
+                vaciarInput();
+            }
+
             const onload = () => {
                 // OPERACIONES UNITARIAS
                 document.getElementById("cuadrado").addEventListener("click", sq);
                 document.getElementById("factorial").addEventListener("click", fact);
                 document.getElementById("raiz").addEventListener("click", sqr);
+
+                //OPERACIONES BINARIAS
+                document.getElementById("suma").addEventListener("click", add);
             }
 
             window.onload = onload ;
@@ -52,11 +81,16 @@
             <input type="text" id="pantalla">
         </div>
 
+        <h3 class="cabecera" title="Unitarias">Operaciones unitarias</h3>
         <div class="operaciones">
             <button id="cuadrado"> x<sup>2</sup></button>
             <button id="factorial"> x! </button>
             <button id="raiz"> &#8730 x</button>
         </div>
 
+        <h3 id="info" class="cabecera" title="binarias">Operaciones binarias</h3>
+        <div class="operaciones">
+            <button id="suma"> + </button>
+        </div>
     </body>
 </html>
