--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <title>Calculadora de CORE - INTEGRA</title>
         <meta charset="utf-8">
         <script type="text/javascript">
-
             // FUNCIONES ÚTILES PARA LA CALCULADORA
             const getInputValue = () => {
                 return Number(document.getElementById("pantalla").value);
@@ -53,14 +52,15 @@
                     resultado *= index;
                 }
                 setInputValue(resultado);
+                rellenarInfo();
             }
 
             const sqr = () => {
                 let inputValue = getInputValue();
                 let resultado = Math.sqrt(inputValue);
                 setInputValue(resultado);
+                rellenarInfo();
             };
-
 
             // OPERACIONES BINARIAS
             let acumulador = 0;
@@ -90,24 +90,28 @@
                 acumula(getInputValue());
                 operador = "+";
                 vaciarInput();
+                rellenarInfo();
             }
 
             const sub = () => {
                 acumula(getInputValue());
                 operador = "-";
                 vaciarInput();
+                rellenarInfo();
             }
 
             const mul = () => {
                 acumula(getInputValue());
                 operador = "*";
                 vaciarInput();
+                rellenarInfo();
             }
 
             const div = () => {
                 acumula(getInputValue());
                 operador = "/";
                 vaciarInput();
+                rellenarInfo();
             }
 
             const eq = () => {
@@ -115,6 +119,7 @@
                 operador = "=";
                 vaciarInput();
                 setInputValue(acumulador);
+                rellenarInfo();
             }
 
             const onload = () => {
