Vaciar input al recibir un click

--- a/index.html
+++ b/index.html
@@ -150,6 +150,9 @@
                 document.getElementById("multiplicacion").addEventListener("click", mul);
                 document.getElementById("division").addEventListener("click", div);
                 document.getElementById("igual").addEventListener("click", eq);
+
+                // MANEJO DE PULSACIÓN AL INPUT
+                document.getElementById("input_texto").addEventListener("click", vaciarInput);
             }
 
             window.onload = onload ;
