--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
         <meta charset="utf-8">
         <script type="text/javascript">
             // FUNCIONES ÚTILES PARA LA CALCULADORA
+            let acumulador = 0;
+            let operador = "";
+
             const getInputValue = () => {
                 return Number(document.getElementById("pantalla").value);
             };
@@ -18,6 +21,8 @@
 
             const validNumber = () => {
                 if ( Number.isNaN(getInputValue()) ) {
+                    acumulador = 0;
+                    operador = "";
                     setInputValue("Error");
                     return false;
                 }
@@ -74,8 +79,6 @@
             };
 
             // OPERACIONES BINARIAS
-            let acumulador = 0;
-            let operador = "";
             let listaAcumulador = "<ul>"
             let cierreListaAcumulador = "</ul>"
 
