Añadir acumulador a lista resultado

--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
                 switch (operador) {
                     case "":
                         acumulador = n;
-                        addToAcumulatorList('Resultado:');
-                        addToAcumulatorList(n);
+                        addToAcumulatorList('Inicio:');
+                        addToAcumulatorList(acumulador);
                         break;
                     case "+":
                         addToAcumulatorList('+');
