--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
                 rellenarInfo();
             };
 
-            // OPERACIONES BINARIAS
+            // OPERACIONES OPCIONALES
+
             let listaAcumulador = "<ul>"
             let cierreListaAcumulador = "</ul>"
 
@@ -91,6 +92,8 @@
             const addValorAcumulado = (n) => {
                 document.getElementById("valorAcumulado").innerHTML = n;
             }
+
+            // OPERACIONES BINARIAS
 
             const acumula = n => {
                 switch (operador) {
